force-app/main/default/objects/Smear_Covid__c/Smear_Covid__c.object-meta.xml
<CustomObject>
    <label>Мазок</label>
    <nameField>
        <displayFormat>SC-{000000}</displayFormat>
        <label>Мазок код</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Мазки</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>