force-app/main/default/objects/Smear_Covid__c/fields/Date_Smear__c.field-meta.xml
<CustomField>
    <fullName>Date_Smear__c</fullName>
    <label>Дата мазка</label>
    <type>Date</type>
</CustomField>