force-app/main/default/objects/Smear_Covid__c/fields/Is_Count_Date__c.field-meta.xml
<CustomField>
    <fullName>Is_Count_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Вычислить дату от контакта?</label>
    <type>Checkbox</type>
</CustomField>