force-app/main/default/objects/Smear_Covid__c/fields/Is_Ready_Notice_Date_Smear__c.field-meta.xml
<CustomField>
    <fullName>Is_Ready_Notice_Date_Smear__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Заявка на Мазок готова?</label>
    <type>Checkbox</type>
</CustomField>