force-app/main/default/objects/Smear_Covid__c/fields/Number_Smear__c.field-meta.xml
<CustomField>
    <fullName>Number_Smear__c</fullName>
    <label>Номер мазка</label>
    <length>15</length>
    <type>Text</type>
</CustomField>