force-app/main/default/objects/Smear_Covid__c/fields/Report_Additional_Text__c.field-meta.xml
<CustomField>
    <fullName>Report_Additional_Text__c</fullName>
    <label>Данные для отчета</label>
    <length>50</length>
    <type>Text</type>
</CustomField>