force-app/main/default/objects/Smear_Covid__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Результат</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
                <label>Положительный</label>
            </value>
            <value>
                <fullName>Negative</fullName>
                <label>Отрицательный</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>