force-app/main/default/objects/Smear_Covid__c/fields/Sick_leave__c.field-meta.xml
<CustomField>
    <fullName>Sick_leave__c</fullName>
    <label>Больничный</label>
    <referenceTo>Sick_leave__c</referenceTo>
    <relationshipLabel>Мазки</relationshipLabel>
    <relationshipName>Smear_Covid</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>