force-app/main/default/objects/Smear_Covid__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date_Smear__c</columns>
    <columns>Result__c</columns>
    <columns>Number_Smear__c</columns>
    <columns>Sick_leave__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>